--- a/packages/jokul/src/components/select/styles/select.scss
+++ b/packages/jokul/src/components/select/styles/select.scss
@@ -5,26 +5,26 @@
 @use "../../../core/jkl/colors";
 
 @include jkl.compact-density-variables {
-    --jkl-select-input-height: #{jkl.rem(32px)};
-    --jkl-select-arrow-right: #{jkl.rem(4px)};
-    --jkl-select-button-padding: #{jkl.$spacing-4} #{jkl.$spacing-32} #{jkl.$spacing-4}
-        #{jkl.$spacing-8};
-    --jkl-select-search-input-padding: #{jkl.$spacing-4} #{jkl.$spacing-8};
-    --jkl-select-native-padding: #{jkl.$spacing-4} #{jkl.$spacing-24} #{jkl.$spacing-4}
-        #{jkl.$spacing-4};
-    --jkl-select-option-padding: #{jkl.$spacing-4} #{jkl.$spacing-8};
+    --jkl-select-input-height: #{jkl.$unit-40};
+    --jkl-select-arrow-right: #{jkl.$unit-05};
+    --jkl-select-button-padding: #{jkl.$unit-05} #{jkl.$unit-40} #{jkl.$unit-05}
+        #{jkl.$unit-10};
+    --jkl-select-search-input-padding: #{jkl.$unit-05} #{jkl.$unit-10};
+    --jkl-select-native-padding: #{jkl.$unit-05} #{jkl.$unit-30} #{jkl.$unit-05}
+        #{jkl.$unit-05};
+    --jkl-select-option-padding: #{jkl.$unit-05} #{jkl.$unit-10};
 
     @include jkl.declare-font-variables("jkl-select", "small");
 }
 
 @include jkl.comfortable-density-variables {
-    --jkl-select-input-height: #{jkl.rem(48px)};
-    --jkl-select-arrow-right: #{jkl.$spacing-8};
-    --jkl-select-button-padding: #{jkl.$spacing-8} #{jkl.rem(36px)} #{jkl.$spacing-8}
-        #{jkl.$spacing-12};
+    --jkl-select-input-height: #{jkl.$unit-60};
+    --jkl-select-arrow-right: #{jkl.$unit-10};
+    --jkl-select-button-padding: #{jkl.$unit-10} #{jkl.rem(36px)} #{jkl.$unit-10}
+        #{jkl.$unit-15};
     --jkl-select-search-input-padding: var(--jkl-select-button-padding);
-    --jkl-select-native-padding: 0 #{jkl.$spacing-40} 0 #{jkl.$spacing-8};
-    --jkl-select-option-padding: #{jkl.$spacing-8} #{jkl.$spacing-12};
+    --jkl-select-native-padding: 0 #{jkl.$unit-50} 0 #{jkl.$unit-10};
+    --jkl-select-option-padding: #{jkl.$unit-10} #{jkl.$unit-15};
 
     @include jkl.declare-font-variables("jkl-select", "body");
 
